fix slider and about text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <p>Неделя до и две недели после дня рождения при предъявлении парпорта.</p>
                             </div>
                         </div> 
-                        <img class="big-slider__img" src="./img/header-baner.jpg" alt="grek">
+                        <img class="big-slider__img" src="./img/header-baner.jpg" alt="banner">
                     </div>
                     <div class="big-slider__item">
                         <img src="./img/header-baner.jpg" alt="grek">
@@ -246,7 +246,7 @@
                     </div>
                     <div class="contacts__right">
                         <div class="contacts__map">
-                            <img src="./img/map.jpg" alt="">
+                            <iframe src="https://api-maps.yandex.ru/frame/v1/-/C6ECIN0D" width="100%" height="100%" frameborder="0"></iframe>
                         </div>
                     </div>
                 </div>
