--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  -->
     <link rel="stylesheet" href="./css/style.css">
 
-    <title>Document</title>
+    <title>Piter STYLE</title>
 </head>
 <body>
     <div class="wrapper">
@@ -50,19 +50,27 @@
                                 <p>Неделя до и две недели после дня рождения при предъявлении парпорта.</p>
                             </div>
                         </div> 
-                        <img class="big-slider__img" src="./img/header-baner.jpg" alt="banner">
+                        <img class="big-slider__img" src="./img/header-baner.jpg" alt="banner1">
                     </div>
                     <div class="big-slider__item">
-                        <img src="./img/header-baner.jpg" alt="grek">
+                        <div class="big-slider__item-container">
+                            <div class="big-slider__item-container-body _box">
+                                <h1>
+                                    Ждём вас по адресу: 
+                                </h1>
+                                <p>пл. Александра Невского д.2 гостиница Москва</p>
+                            </div>
+                        </div> 
+                        <img class="big-slider__img" src="./img/WhatsApp Image 2022-10-04 at 13.26.45.jpeg" alt="banner2">
                     </div>
                 </div>
             </div>
             <div class="page__call call">
                 <div class="call__body">
-                    <a href="#send" class="call__button">
-                        <img class="call__img-hide" src="./img/writing.svg" alt="">
+                    <a href="https://n532402.yclients.com/" class="call__button">
+                        <img class="call__img-hide" src="./img/writing.svg" alt="send">
                         <p class="call__text">Записаться</p>
-                        <img src="./img/writing.svg" alt="">
+                        <img src="./img/writing.svg" alt="send">
                     </a>
                     <a class="call__hide">
                         <p>свернуть</p>
@@ -76,33 +84,37 @@
                         <h1>Сервис-меню</h1>
                     </div>
                     <div class="menu__body">
-                        <div class="menu__item">
-                            <img src="./img/Vector.svg" alt="">
-                            <h2>Макияж</h2>
-                        </div>
-                        <div class="menu__item">
-                            <img src="./img/Vector.svg" alt="">
-                            <h2>Стилист</h2>
-                        </div>
-                        <div class="menu__item">
-                            <img src="./img/Vector.svg" alt="">
-                            <h2>Ногтевой<br> 
-                                сервис</h2>
-                        </div>
-                        <div class="menu__item">
-                            <img src="./img/Vector.svg" alt="">
-                            <h2>Косметология</h2>
-                        </div>
-                        <div class="menu__item">
-                            <img src="./img/Vector.svg" alt="">
-                            <h2>Массаж</h2>
-                        </div>
+                        <a href="http://piterstyle.com/service.php?id=1">
+                            <div class="menu__item">
+                                <img src="./img/2s.svg" alt="makeup">
+                                <h2>Парикмахерские услуги</h2>
+                            </div>
+                        </a>
+                        <a href="http://piterstyle.com/service.php?id=2">
+                            <div class="menu__item">
+                                <img src="./img/3s.svg" alt="manicure">
+                                <h2>Ногтевой<br> 
+                                    сервис</h2>
+                            </div>
+                        </a>
+                        <a href="http://piterstyle.com/service.php?id=3">
+                            <div class="menu__item">
+                                <img src="./img/4s.svg" alt="cosmetology">
+                                <h2>Косметология</h2>
+                            </div>
+                        </a>
+                        <a href="http://piterstyle.com/service.php?id=4">
+                            <div class="menu__item">
+                                <img src="./img/5s.svg" alt="massage">
+                                <h2>Массаж</h2>
+                            </div>
+                        </a>
                     </div>
                     <div class="menu__text">
                         <p>Хотите выглядеть успешным, модным и красивым?</p>
                         <p>Доверьте заботу о себе профессионалам Piterstyle!</p>
                     </div>
-                    <a href="#">
+                    <a href="http://piterstyle.com/services.php">
                         <div class="menu__button">
                             Смотреть все услуги
                         </div>
@@ -116,13 +128,18 @@
                         <h3>акция</h3>
                         <h1>Стрижка от 999р.</h1>
                         <p>Акция действует на все виды мужских и женских стрижек в период 16 сентября по 16 октября</p>
-                        <a href="#">
-                            <div class="sale__button">
+                        <a href="https://n532402.yclients.com/">
+                            <div class="sale__button _desktop">
                                 Записаться
                             </div>
                         </a>
                     </div>
                 </div>
+                <a href="https://n532402.yclients.com/">
+                    <div class="sale__button _mobile">
+                        Записаться
+                    </div>
+                </a>
             </div>
             <div class="services__header _container" id="services">
                 <h1>Услуги</h1>
@@ -130,55 +147,27 @@
             </div>  
             <ul class="page__services nav nav-tabs _container" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Макияж</button>
+                  <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Парикмахерские услуги</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Стилист</button>
+                  <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Ногтевой сервис</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Ногтевой сервис</button>
+                  <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#cosm-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">Косметология</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">Косметология</button>
-                </li>
-                <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">Массаж</button>
+                  <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#massage-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">Массаж</button>
                 </li>
               </ul>
               <div class="services__content tab-content _container" id="myTabContent">
                 <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
                     <div class="services__slider">
                         <div class="services__item">
-                            <img src="./img/one.jpg" alt="">
-                            <h2>Дневной макияж</h2>
-                            <a href="#">
-                                <div class="services__button">
-                                    Подробнее
-                                </div>
-                            </a>
-                        </div>
-                        <div class="services__item">
-                            <img src="./img/two.jpg" alt="">
-                            <h2>Вечерний макияж</h2>
-                            <a href="#">
-                                <div class="services__button">
-                                    Подробнее
-                                </div>
-                            </a>
-                        </div>
-                        <div class="services__item">
-                            <img src="./img/three.jpg" alt="">
-                            <h2>Экспресс-макияж</h2>
-                            <a href="#">
-                                <div class="services__button">
-                                    Подробнее
-                                </div>
-                            </a>
-                        </div>
-                        <div class="services__item">
-                            <img src="./img/four.jpg" alt="">
-                            <h2>Дневной макияж</h2>
-                            <a href="#">
+                            <img src="./img/parik.jpeg" alt="girl">
+                            <h2>Парикмахерские услуги</h2>
+                            <p>Мужские стрижки, женские стрижки, укладки, прически. Классическое окрашивание, креативное, сложное окрашивание, уходы.
+                            </p>
+                            <a href="http://piterstyle.com/service.php?id=1" target="_blank">
                                 <div class="services__button">
                                     Подробнее
                                 </div>
@@ -186,9 +175,51 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">...</div>
-                <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">...</div>
-                <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">...</div>
+                <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+                    <div class="services__slider">
+                        <div class="services__item">
+                            <img src="./img/nail.jpeg" alt="nail">
+                            <h2>Ногтевой сервис</h2>
+                            <p>Маникюр классически, аппаратный, комбинированный, мужской, детский. Покрытие ногтей. Педикюр(аппаратный, классический, комбинированный). Спа уходы за ногами. Педикюр мужской.
+                            </p>
+                            <a href="http://piterstyle.com/service.php?id=2" target="_blank">
+                                <div class="services__button">
+                                    Подробнее
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="cosm-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                    <div class="services__slider">
+                        <div class="services__item">
+                            <img src="./img/cosmetic.jpeg" alt="cosmetic">
+                            <h2>Косметология</h2>
+                            <p>Массаж лица, чисткаи лица, пилинги лица, экспресс уходы, уход за кожей вокруг глаз, процедуры премиум класса, уходы для мужчин. Депиляция(воск, шугаринг). Уход за бровями и ресницами.
+                            </p>
+                            <a href="http://piterstyle.com/service.php?id=3" target="_blank">
+                                <div class="services__button">
+                                    Подробнее
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="massage-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">
+                    <div class="services__slider">
+                        <div class="services__item">
+                            <img src="./img/massage.jpeg" alt="massage">
+                            <h2>Массаж</h2>
+                            <p>общеукрепляющий массаж, массаж спины, массаж воротниковой зоны, массаж ног, антицеллюлитный массаж, релакс массаж, спортивный массаж. Обертывание. LPG массаж.
+                            </p>
+                            <a href="http://piterstyle.com/service.php?id=4" target="_blank">
+                                <div class="services__button">
+                                    Подробнее
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
               </div>
             <div class="about__container _container" id="about">
                 <div class="about__header">
@@ -207,24 +238,19 @@
                         </div>
                         <p>Салон Piterstyle — уютный уголок красоты в Северной столице Комплексный уход за собой — это не просто прихоть или дань моде: внешний вид определяет отношение к человеку. Ухоженные волосы, ногти и тело привлекают внимание, говорят об аккуратности, уверенности в себе, характере и амбициях. Хотите выглядеть успешным, модным и красивым? Доверьте заботу о себе профессионалам Piterstyle!
                         </p>
-                        <h1>1/4</h1>
+                       
                     </div>
                     <div class="about-slider__item">
                         <img src="./img/about-two.jpg" alt="">
                     </div>
                     <div class="about-slider__item">
-                        <img src="./img/about-one.jpg" alt="">
-                    </div>
-                    <div class="about-slider__item-text">
-                        <div class="about-slider__logo">
-                            <img src="./img/Logo-big.svg" alt="">
-                        </div>
-                        <p>Салон Piterstyle — уютный уголок красоты в Северной столице Комплексный уход за собой — это не просто прихоть или дань моде: внешний вид определяет отношение к человеку. Ухоженные волосы, ногти и тело привлекают внимание, говорят об аккуратности, уверенности в себе, характере и амбициях. Хотите выглядеть успешным, модным и красивым? Доверьте заботу о себе профессионалам Piterstyle!
-                        </p>
-                        <h1>1/4</h1>
+                        <img src="./img/about-three.jpeg" alt="">
                     </div>
                     <div class="about-slider__item">
-                        <img src="./img/about-two.jpg" alt="">
+                        <img src="./img/about-four.jpeg" alt="">
+                    </div>
+                    <div class="about-slider__item">
+                        <img src="./img/about-five.jpeg" alt="">
                     </div>
                 </div>
             </div>
@@ -252,9 +278,8 @@
                             <a href="mailto:pitersvn@gmail.com"><p>Pitersvn@gmail.com</p></a>
                         </div>
                         <ul class="contacts__list">
-                            <li><a href="#"><img src="./img/vk.svg" alt="" class="contacts__item"></a></li>
-                            <li><a href="#"><img src="./img/insta.svg" alt="" class="contacts__item"></a></li>
-                            <li><a href="#"><img src="./img/youtube.svg" alt="" class="contacts__item"></a></li>
+                            <li><a href="https://vk.com/club139803592" target="_blank"><img src="./img/vk.svg" alt="vk" class="contacts__item"></a></li>
+                            <li><a href="https://www.instagram.com/piterstyle.ru/" target="_blank"><img src="./img/insta.svg" alt="insta" class="contacts__item"></a></li>
                         </ul>
                     </div>
                     <div class="contacts__right">
