update for demo

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <nav class="nav__menu _container">
                     <a class="nav__logo _desktop" href="index.html"><img class="nav__logo-img" src="./img/logo-svg.svg" alt="logo"></a>
                     <ul class="nav__list">
-                        <li><a class="nav__link" href="#menu">Услуги</a></li>
-                        <li><a class="nav__link" href="#services">Прайс</a></li>
-                        <li><a class="nav__link" href="#stock">Акции</a></li>
-                        <li><a class="nav__link" href="#about">О нас</a></li>
-                        <li><a class="nav__link" href="#contact">Контакты</a></li>
+                        <li><a class="nav__link" href="http://piterstyle.com/services.php" target="_blank">Услуги</a></li>
+                        <li><a class="nav__link" href="http://piterstyle.com/pdf/price2020.pdf" target="_blank">Прайс</a></li>
+                        <li><a class="nav__link" href="http://piterstyle.com/specials.php" target="_blank">Акции</a></li>
+                        <li><a class="nav__link" href="http://piterstyle.com/about.php" target="_blank">О нас</a></li>
+                        <li><a class="nav__link" href="http://piterstyle.com/contacts.php" target="_blank">Контакты</a></li>
                     </ul>
                 </nav>
             </div>
@@ -67,7 +67,7 @@
             </div>
             <div class="page__call call">
                 <div class="call__body">
-                    <a href="https://n532402.yclients.com/" class="call__button">
+                    <a href="https://n532402.yclients.com/" target="_blank" class="call__button">
                         <img class="call__img-hide" src="./img/writing.svg" alt="send">
                         <p class="call__text">Записаться</p>
                         <img src="./img/writing.svg" alt="send">
@@ -128,7 +128,7 @@
                         <h3>акция</h3>
                         <h1>Стрижка от 999р.</h1>
                         <p>Акция действует на все виды мужских и женских стрижек в период 16 сентября по 16 октября</p>
-                        <a href="https://n532402.yclients.com/">
+                        <a href="https://n532402.yclients.com/" target="_blank">
                             <div class="sale__button _desktop">
                                 Записаться
                             </div>
@@ -210,7 +210,7 @@
                         <div class="services__item">
                             <img src="./img/massage.jpeg" alt="massage">
                             <h2>Массаж</h2>
-                            <p>общеукрепляющий массаж, массаж спины, массаж воротниковой зоны, массаж ног, антицеллюлитный массаж, релакс массаж, спортивный массаж. Обертывание. LPG массаж.
+                            <p>Общеукрепляющий массаж, массаж спины, массаж воротниковой зоны, массаж ног, антицеллюлитный массаж, релакс массаж, спортивный массаж. Обертывание. LPG массаж.
                             </p>
                             <a href="http://piterstyle.com/service.php?id=4" target="_blank">
                                 <div class="services__button">
@@ -321,7 +321,6 @@
                             <ul>
                                 <li><a href="https://vk.com/club139803592" target="_blank"><img src="./img/vk-bottom.svg" alt="vk"></a></li>
                                 <li><a href="https://www.instagram.com/piterstyle.ru/" target="_blank"><img src="./img/insta-bottom.svg" alt="instagramm"></a></li>
-                                <li><a href="" target="_blank"><img src="./img/youtube-bottom.svg" alt="youtube"></a></li>
                             </ul>
                         </div>
                         <div class="footer__mark">
